<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_item_login"
            android:icon="@drawable/ic_person_outline_black_48dp"
            android:title="@string/nav_login"/>

        <item
            android:id="@+id/navigation_item_home"
            android:icon="@mipmap/ic_home_black_48dp"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/navigation_item_overview"
            android:icon="@drawable/ic_list_black_48dp"
            android:title="@string/nav_overview"/>

        <item
            android:id="@+id/navigation_item_note"
            android:icon="@drawable/ic_insert_drive_file_black_48dp"
            android:title="@string/nav_note"/>

        <item
            android:id="@+id/navigation_item_logout"
            android:icon="@mipmap/ic_eject_black"
            android:title="@string/nav_logout"/>

    </group>
</menu>