<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.yeahdev.yeahurls.activities.AddUrlActivity">

    <LinearLayout
        android:id="@+id/llKeywordsUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etKeywordsUrl"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textUri"
            android:layout_margin="10dp"
            android:hint="@string/hint_keywords"
            android:textColor="@color/window_foreground"
            android:theme="@style/EditTextStyle"/>

        <ImageButton
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnClearKeywordsUrl"
            android:src="@drawable/ic_clear_white_48dp"
            android:background="@null"
            android:contentDescription="@string/hint_keywords"
            android:layout_margin="3dp"
            android:scaleType="centerInside" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUrl"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="10dp"
            android:hint="@string/hint_urls"
            android:textColor="@color/window_foreground"
            android:theme="@style/EditTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButtonUrl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/btnCancel"
            android:text="@string/btn_cancel"
            android:background="@drawable/roundcorner_red"/>

        <Button
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:paddingRight="0dp"
            android:id="@+id/btnSave"
            android:text="@string/btn_save"
            android:background="@drawable/roundcorner"
            android:visibility="visible"/>

        <Button
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:paddingRight="0dp"
            android:id="@+id/btnUpdate"
            android:text="@string/btn_update"
            android:background="@drawable/roundcorner"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
