<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llvLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:orientation="vertical"
    tools:context="com.yeahdev.yeahurls.fragments.LoginFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/cardview_background"
        android:clickable="true"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_margin="10dp"
                android:hint="@string/hint_email"
                android:textColor="@color/secondary_text"
                android:theme="@style/EditTextStyle"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:hint="@string/hint_password"
                android:textColor="@color/secondary_text"
                android:theme="@style/EditTextStyle"/>

            <Button
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_margin="10dp"
                android:id="@+id/btnLogin"
                android:text="@string/nav_login"
                android:background="@color/primary"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>