<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cvOverviewItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="4dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_title"
                    android:id="@+id/tvTitle"
                    android:background="@color/primary"
                    android:textColor="@color/window_foreground"
                    android:textSize="30sp"
                    android:padding="10dp"
                    android:elevation="10dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="0dp"
                    android:layout_marginTop="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_notes"
                    android:id="@+id/tvNote"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hint_keywords"
                    android:id="@+id/tvKeywordsNote"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabRemoveNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/yeahurls_fab_note_margin_top"
            android:layout_marginRight="@dimen/yeahurls_fab_margin_right"
            android:layout_marginEnd="@dimen/yeahurls_fab_margin_right"
            android:src="@drawable/ic_clear_white_48dp"
            android:layout_gravity="top|end"
            app:borderWidth="0px"
            app:fabSize="mini" />

    </android.support.v7.widget.CardView>
</LinearLayout>